<resources>
    <string name="app_name">ArrangeIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_submission">Submission</string>
    <string name="hint_email">Enter your email</string>
    <string name="dummy">Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet consectuer.</string>
    <string name="hint_password">Type your password</string>
    <string name="estetic_overview">Overview</string>
    <string name="students">Students</string>
    <string name="title_activity_student">Students</string>
    <string name="search">Search</string>
    <string name="title_activity_student_flow">Create or edit</string>
    <string name="hint_name">Insert name</string>
    <string name="hint_nim">Carefully type the NIM</string>
    <string name="hint_email_">Type student email</string>
    <string-array name="semester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="title_activity_lecturer">Lecturers</string>
    <string name="title_activity_lecturer_flow">Create or edit</string>
    <string name="hint_nipy">Carefully type nipy</string>
    <string name="hint_email_lecturer">Enter lecturer email</string>
    <string name="title_activity_room">Rooms</string>
    <string name="title_activity_room_flow">Create or edit</string>
    <string name="hint_desc">Write some short description</string>
    <string name="title_activity_course">Courses</string>
    <string name="title_activity_course_flow">Create or edit</string>
    <string name="hint_code">Insert the code of this course</string>
</resources>
