<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/hint_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:fontFamily="@font/product_sans"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nim">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_nim"
                android:maxLines="1"
                android:fontFamily="@font/product_sans"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/hint_email_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:fontFamily="@font/product_sans"
                android:id="@+id/et_email"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose semester"
            android:fontFamily="@font/product_sans"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:entries="@array/semester"
            android:id="@+id/sp_semester"
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </androidx.appcompat.widget.AppCompatSpinner>
    </LinearLayout>
</ScrollView>